// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RowDeployment should have cell error message 1`] = `
<div>
  <div
    class="group flex min-h-6 select-none text-xs  bg-neutral-550 hover:bg-neutral-600 row-error"
  >
    <div
      class="text-red-500 bg-neutral-550 group-hover:bg-neutral-650"
      data-testid="index"
    >
      <div
        class="h-6 w-10 px-2 py-1 text-right font-code"
      >
        2
      </div>
    </div>
    <div
      class="w-[158px] shrink-0 py-1 pl-2 pr-3 font-code text-red-500"
      data-testid="cell-date"
      title="Thu, 15 Feb 2024 13:51:01 GMT"
    />
    <div
      class="relative w-full select-text overflow-hidden py-1 pr-6 font-code text-red-500"
      data-testid="cell-msg"
    >
      <span
        class="truncate whitespace-pre-wrap break-all"
      >
        <code
          class="code-ansi"
        >
          <span>
            error message
          </span>
        </code>
      </span>
      <span
        class="relative cursor-pointer after:absolute after:inset-[-4px] after:block after:content-[''] !absolute right-2 top-1 text-white opacity-0 group-hover:opacity-100"
        data-state="closed"
        data-testid="copy-container"
      >
        <span
          class="icon-solid-copy shrink-0 "
          role="img"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`RowDeployment should have cell message with ANSI colors and links 1`] = `
<div>
  <div
    class="group flex min-h-6 select-none text-xs  bg-neutral-550 hover:bg-neutral-600 "
  >
    <div
      class="text-green-500 bg-neutral-550 group-hover:bg-neutral-650"
      data-testid="index"
    >
      <div
        class="h-6 w-10 px-2 py-1 text-right font-code"
      >
        2
      </div>
    </div>
    <div
      class="w-[158px] shrink-0 py-1 pl-2 pr-3 font-code text-green-500"
      data-testid="cell-date"
      title="Thu, 15 Feb 2024 13:51:01 GMT"
    />
    <div
      class="relative w-full select-text overflow-hidden py-1 pr-6 font-code text-green-500"
      data-testid="cell-msg"
    >
      <span
        class="truncate whitespace-pre-wrap break-all"
      >
        <code
          class="code-ansi"
        >
          <span
            style="color: rgb(187, 0, 0);"
          >
            my message 
            <a
              href="https://qovery.com"
              target="_blank"
            >
              https://qovery.com
            </a>
          </span>
        </code>
      </span>
      <span
        class="relative cursor-pointer after:absolute after:inset-[-4px] after:block after:content-[''] !absolute right-2 top-1 text-white opacity-0 group-hover:opacity-100"
        data-state="closed"
        data-testid="copy-container"
      >
        <span
          class="icon-solid-copy shrink-0 "
          role="img"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`RowDeployment should have cell success message 1`] = `
<div>
  <div
    class="group flex min-h-6 select-none text-xs  bg-neutral-550 hover:bg-neutral-600 "
  >
    <div
      class="text-green-500 bg-neutral-550 group-hover:bg-neutral-650"
      data-testid="index"
    >
      <div
        class="h-6 w-10 px-2 py-1 text-right font-code"
      >
        2
      </div>
    </div>
    <div
      class="w-[158px] shrink-0 py-1 pl-2 pr-3 font-code text-green-500"
      data-testid="cell-date"
      title="Thu, 15 Feb 2024 13:51:01 GMT"
    />
    <div
      class="relative w-full select-text overflow-hidden py-1 pr-6 font-code text-green-500"
      data-testid="cell-msg"
    >
      <span
        class="truncate whitespace-pre-wrap break-all"
      >
        <code
          class="code-ansi"
        >
          <span>
            message
          </span>
        </code>
      </span>
      <span
        class="relative cursor-pointer after:absolute after:inset-[-4px] after:block after:content-[''] !absolute right-2 top-1 text-white opacity-0 group-hover:opacity-100"
        data-state="closed"
        data-testid="copy-container"
      >
        <span
          class="icon-solid-copy shrink-0 "
          role="img"
        />
      </span>
    </div>
  </div>
</div>
`;
